grammar.js
    start: $ => repeat(
      choice(
        $.program_definition,
        //optional($.function_definition) //todo
      )
    ),

    program_definition: $ => prec.right(seq(
      $.identification_division,
      optional($.environment_division),
      optional($.data_division),
      optional($.procedure_division), //todo
      repeat($.end_program), //todo
      //optional($.LINE_PREFIX_COMMENT),
    )),

    identification_division: $ => seq(
      $._IDENTIFICATION, $._DIVISION, '.',
      optional(
        seq($._PROGRAM_ID, '.',
          $.program_name,
          optional(choice(
            $.as_literal,
            $.is_initial,
            $.is_common)),
          '.')),
      repeat(choice(
        $.author_section,
        $.installation_section,
        $.date_written_section,
        $.date_compiled_section,
        $.security_section)),
    ),

    program_name: $ => choice(
      $._WORD,
      $._LITERAL
    ),

    data_division: $ => seq(
      $._DATA, $._DIVISION, '.',
      optional($.file_section),
      optional($.working_storage_section),
      optional($.local_storage_section),
      optional($.linkage_section),
      optional($.report_section),
      optional($.screen_section),
    ),

    record_description_list: $ => seq(
      repeat1(seq(
        choice(
          $.data_description,
          $.exec_sql_declare_section,
          $.exec_sql_include
        ),
        repeat1('.')
      ))
    ),

    working_storage_section: $ => seq(
      $._WORKING_STORAGE, $._SECTION, '.',
      repeat(seq(
        choice(
          $.data_description,
          $.exec_sql_declare_section,
          $.exec_sql_include
        ),
        repeat1('.')
      ))
    ),

    data_description: $ => choice(
      $.constant_entry,
      seq(
        $.level_number, $.entry_name,
        repeat($._data_description_clause), optional($._LITERAL)
      ),
      seq(
        $.level_number,
        repeat1($._data_description_clause), optional($._LITERAL)
      ),
      /*seq(
        $.level_number_88, $.entry_name
      ),*/
    ),

    level_number: $ => /[0-9][0-9]?/,
    entry_name: $ => choice(
      $._FILLER,
      $._WORD
    ),

    _data_description_clause: $ => choice(
      $.redefines_clause,
      $.external_clause,
      $.global_clause,
      $.picture_clause,
      $.usage_clause,
      $.sign_clause,
      $.occurs_clause,
      $.justified_clause,
      $.synchronized_clause,
      $.blank_clause,
      $.based_clause,
      $.value_clause,
      $.renames_clause,
      $.any_length_clause,
      $.error
    ),

    qualified_word: $ => sepBy(
      $.WORD, $._in_of
    ),

    _in_of: $ => choice(
      $._IN,
      $._OF
    ),

    picture_clause: $ => seq(
      choice($._PICTURE, $._PIC),
      optional($._IS),
      $._picture_string
    ),

    //todo
    _picture_string: $ => choice(
      $.picture_x,
      $.picture_n,
      $.picture_9,
      $.picture_a,
      $.picture_edit,
    ),

    picture_x: $ => /([xX](\([0-9]+\))?)+/,

    local_storage_section: $ => seq(
      $._LOCAL_STORAGE,
      $._SECTION,
      '.',
      $.record_description_list
    ),

    linkage_section: $ => seq(
      $._LINKAGE, $._SECTION, '.',
      $.record_description_list
    ),

    procedure_division: $ => seq(
      $._PROCEDURE, $._DIVISION,
      optional($.procedure_using_chaining),
      optional($.procedure_returning),
      '.',
      optional($.procedure_declaratives),
      optional($._procedure_division_contenet)
    ),

    _procedure_division_contenet: $ => prec.right(choice(
      seq(
        optional($._procedure_division_headers),
        repeat(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        repeat1($._procedure_division_statement)
      ),
      seq(
        optional($._procedure_division_headers),
        repeat1(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        repeat($._procedure_division_statement)
      ),
    )),

    paragraph_header: $ => seq(
      field('name', choice($._WORD, $.integer)),
      '.'
    ),

    period: $ => '.',

    alter_statement: $ => seq(
      $._ALTER,
      repeat1($.alter_option)
    ),

    alter_option: $ => seq(
      field('proc_name', $._id_or_lit),
      $.TO,
      optional(seq(
        $.PROCEED,
        $.TO
      )),
      field('to', $._id_or_lit)
    ),

    close_statement: $ => seq(
      $._CLOSE,
      repeat1($.close_arg),
    ),

    close_arg: $ => seq(
      field('file_handler', $.WORD),
      optional($.close_option)
    ),

    continue_statement: $ => $._CONTINUE,

    delete_statement: $ => seq(
      $._DELETE,
      field('file_name', $.WORD),
      optional(choice($._RECORD, $._RECORDS)),
    ),

    _id_or_lit: $ => choice(
      $._identifier,
      $._literal
    ),

    merge_statement: $ => seq(
      $._MERGE,
      $._sort_body
    ),

    exec_sql_statement: $ => seq(
      $.EXEC,
      $.SQL,
      choice(
        seq(optional($.sql_cte_clause), $.sql_select_query),
        $.sql_insert_statement,
        $.sql_update_statement,
        $.sql_delete_statement,
        $.sql_merge_statement,
        $.sql_create_table_statement,
        $.sql_alter_table_statement,
        $.sql_drop_table_statement,
        $.sql_prepare_statement,
        $.sql_declare_cursor_statement,
        seq(
          field('kind', $.WORD),
          repeat($.sql_unparsed_tail)
        )
      ),
      $.END_EXEC
    ),

    // D-09/D-10/D-11: BEGIN and END are independent markers. Data entries
    // remain ordinary siblings in their enclosing section or record list.
    exec_sql_declare_section: $ => seq(
      $.EXEC,
      $.SQL,
      choice(
        alias(/[bB][eE][gG][iI][nN]/, $.WORD),
        alias(/[eE][nN][dD]/, $.WORD)
      ),
      alias(/[dD][eE][cC][lL][aA][rR][eE]/, $.WORD),
      alias(/[sS][eE][cC][tT][iI][oO][nN]/, $.WORD),
      $.END_EXEC
    ),

    // D-09/D-10/D-12: includes are named directives in DATA and PROCEDURE
    // divisions. The member is generic and directly queryable.
    exec_sql_include: $ => seq(
      $.EXEC,
      $.SQL,
      alias(/[iI][nN][cC][lL][uU][dD][eE]/, $.WORD),
      $.sql_include_name,
      $.END_EXEC
    ),

    sql_include_name: $ => prec(1, $.WORD),

    sql_cte_clause: $ => seq(
      $._WITH,
      sepBy($.sql_cte_definition, ',')
    ),

    sql_cte_definition: $ => prec.right(2, seq(
      $.sql_cte_name,
      optional(seq('(', sepBy($.WORD, ','), ')')),
      $._AS,
      '(',
      $.sql_select_query,
      ')'
    )),

    sql_cte_name: $ => prec(2, $.WORD),

    sql_select_query: $ => prec.right(1, seq(
      field('kind', alias($._SELECT, $.WORD)),
      repeat(choice(
        $.sql_source_reference,
        $.sql_nested_query,
        $.sql_unparsed_tail
      ))
    )),

    sql_prepare_statement: $ => prec.right(2, seq(
      field('kind', alias(/[pP][rR][eE][pP][aA][rR][eE]/, $.WORD)),
      $.sql_unparsed_tail,
      alias($._FROM, $.WORD),
      $.sql_dynamic_source
    )),

    sql_dynamic_source: $ => prec(2, seq(
      ':',
      $.WORD
    )),

    sql_declare_cursor_statement: $ => prec.right(2, seq(
      field('kind', alias(/[dD][eE][cC][lL][aA][rR][eE]/, $.WORD)),
      $._sql_identifier,
      alias(/[cC][uU][rR][sS][oO][rR]/, $.WORD),
      alias(/[fF][oO][rR]/, $.WORD),
      $.sql_select_query
    )),

    sql_insert_statement: $ => prec.right(2, seq(
      field('kind', alias(/[iI][nN][sS][eE][rR][tT]/, $.WORD)),
      alias($._INTO, $.WORD),
      $.sql_source_candidate,
      repeat($.sql_unparsed_tail)
    )),

    sql_update_statement: $ => prec.right(2, seq(
      field('kind', alias($._UPDATE, $.WORD)),
      $.sql_source_candidate,
      repeat($.sql_unparsed_tail)
    )),

    sql_delete_statement: $ => prec.right(2, seq(
      field('kind', alias($._DELETE, $.WORD)),
      alias($._FROM, $.WORD),
      $.sql_source_candidate,
      repeat($.sql_unparsed_tail)
    )),

    sql_merge_statement: $ => prec.right(2, seq(
      field('kind', alias($._MERGE, $.WORD)),
      alias($._INTO, $.WORD),
      $.sql_source_candidate,
      repeat(choice(
        $.sql_using_reference,
        $.sql_unparsed_tail
      ))
    )),

    sql_using_reference: $ => prec.right(2, seq(
      alias($._USING, $.WORD),
      $.sql_source_candidate
    )),

    sql_create_table_statement: $ => prec.right(2, seq(
      field('kind', alias(/[cC][rR][eE][aA][tT][eE]/, $.WORD)),
      alias(/[tT][aA][bB][lL][eE]/, $.WORD),
      optional(seq(
        alias(/[iI][fF]/, $.WORD),
        alias(/[nN][oO][tT]/, $.WORD),
        alias(/[eE][xX][iI][sS][tT][sS]/, $.WORD)
      )),
      $.sql_source_candidate,
      repeat($.sql_unparsed_tail)
    )),

    sql_alter_table_statement: $ => prec.right(2, seq(
      field('kind', alias($._ALTER, $.WORD)),
      alias(/[tT][aA][bB][lL][eE]/, $.WORD),
      $.sql_source_candidate,
      repeat($.sql_unparsed_tail)
    )),

    sql_drop_table_statement: $ => prec.right(2, seq(
      field('kind', alias(/[dD][rR][oO][pP]/, $.WORD)),
      alias(/[tT][aA][bB][lL][eE]/, $.WORD),
      optional(seq(
        alias(/[iI][fF]/, $.WORD),
        alias(/[eE][xX][iI][sS][tT][sS]/, $.WORD)
      )),
      $.sql_source_candidate,
      repeat($.sql_unparsed_tail)
    )),

    sql_nested_query: $ => prec.right(2, seq(
      '(',
      $.sql_select_query,
      ')',
      optional($.sql_table_alias)
    )),

    sql_source_reference: $ => prec.right(2, seq(
      choice($._FROM, $._SQL_JOIN),
      choice(
        $.sql_source_candidate,
        $.sql_nested_query
      )
    )),

    // D-18: this is intentionally a raw candidate. Plan 04-02 assigns it to
    // the smallest enclosing statement range and subtracts same-statement CTE
    // definitions before treating the remaining names as physical tables.
    sql_source_candidate: $ => prec.right(2, seq(
      $.sql_table_name,
      optional($.sql_table_alias)
    )),

    // D-05/D-06: the complete two- or three-part object is one table node;
    // its statement-local alias is a separate sibling node.
    sql_table_name: $ => prec(2, sepBy($._sql_identifier, '.')),

    sql_table_alias: $ => prec(2, seq(
      $._AS,
      $._sql_identifier
    )),

    _sql_identifier: $ => choice(
      $.WORD,
      $._sql_underscore_identifier,
      $.sql_delimited_identifier
    ),

    sql_delimited_identifier: $ => token(prec(1, /\"([^\"]|\"\")*\"/)),

    // One bounded atomic leaf per named tail keeps modeled FROM/JOIN anchors
    // available to keyword extraction instead of hiding them in a greedy sink.
    sql_unparsed_tail: $ => prec(-1, choice(
      $._sql_host_reference,
      $._sql_qualified_reference,
      $._sql_unparsed_token
    )),

    _sql_host_reference: $ => prec.right(1, seq(
      ':',
      sepBy($._sql_identifier, '.')
    )),

    _sql_qualified_reference: $ => prec.right(-1, seq(
      $._sql_identifier,
      '.',
      $._sql_identifier
    )),

    _sql_unparsed_token: $ => choice(
      $.WORD,
      alias($._SELECT, $.WORD),
      $._sql_underscore_identifier,
      $._LITERAL,
      '(',
      ')',
      ',',
      '=',
      '>',
      '<',
      '!',
      '|',
      ':',
      '*',
      '+',
      '-'
    ),

    // SQL-only keywords are private except SQL itself. Keeping them valid only
    // below the two-token EXEC SQL anchor protects ordinary COBOL verbs.
    _SQL_JOIN: $ => /[jJ][oO][iI][nN]/,

    // IDMS DML (Phase 2, D-01). idms_record_name/idms_set_name are named
    // rules rather than field() labels (D-02) so queries/idms.scm matches
    // them at any nesting depth across all four idms_*_statement types.
    open_statement: $ => seq(
      $._OPEN,
      repeat1($.open_arg)
    ),

    open_arg: $ => seq(
      field('mode', choice($.INPUT, $.OUTPUT, $.I_O, $.EXTEND)),
      field('sharing', optional(seq(
        $._SHARING,
        optional($._WITH),
        choice(
          seq($.ALL, optional($._OTHER)),
          seq($.NO, optional($._OTHER)),
          seq($.READ, $.ONLY),
        )
      ))),
      field('file_name_list', repeat1($.WORD)),
      field('option', optional(choice(
        seq(optional($._WITH), $.NO, $.REWIND),
        seq(optional($._WITH), $.LOCK)
      )))
    ),

    _sort_body: $ => prec.right(seq(
      field('x', $.qualified_word),
      field('key_list', repeat($.sort_key)),
      field('duplicates', optional(seq(
        optional($._WITH),
        $.DUPLICATES,
        optional($._IN,),
        $._ORDER
      ))),
      field('collating', optional(seq(
        $._coll_sequence,
        optional($._IS),
        $.qualified_word
      ))),
      field('input', optional(choice(
        $.sort_input_using,
        $.sort_input_procedure
      ))),
      field('output', optional(choice(
        $.sort_output_giving,
        $.sort_output_procedure,
      )))
    )),

    sort_key: $ => seq(
      optional($._ON),
      field('order', choice($.ASCENDING, $.DESCENDING)),
      optional($._KEY),
      optional($._IS),
      field('key_list', repeat($.qualified_word))
    ),

    sort_input_using: $ => seq(
      $._USING,
      repeat1($.WORD)
    ),

    sort_output_giving: $ => seq(
      $._GIVING,
      repeat1($.WORD)
    ),

    _LITERAL: $ => choice(
      $.number,
      $._string,
    ),

    //todo
    number: $ => choice($.integer, $.decimal),
    integer: $ => /[+-]?[0-9,]+/,
    _ALTER: $ => /[aA][lL][tT][eE][rR]/,
    _AS: $ => /[aA][sS]/,
    _CLOSE: $ => /[cC][lL][oO][sS][eE]/,
    _CONTINUE: $ => /[cC][oO][nN][tT][iI][nN][uU][eE]/,
    _DATA: $ => /[dD][aA][tT][aA]/,
    _DELETE: $ => /[dD][eE][lL][eE][tT][eE]/,
    _DIVISION: $ => /[dD][iI][vV][iI][sS][iI][oO][nN]/,
    _FILLER: $ => /[fF][iI][lL][lL][eE][rR]/,
    _FROM: $ => /[fF][rR][oO][mM]/,
    _GIVING: $ => /[gG][iI][vV][iI][nN][gG]/,
    _IDENTIFICATION: $ => /[iI][dD][eE][nN][tT][iI][fF][iI][cC][aA][tT][iI][oO][nN]/,
    _INTO: $ => /[iI][nN][tT][oO]/,
    _IS: $ => /[iI][sS]/,
    _KEY: $ => /[kK][eE][yY]/,
    _LINKAGE: $ => /[lL][iI][nN][kK][aA][gG][eE]/,
    _LOCAL_STORAGE: $ => /[lL][oO][cC][aA][lL]-[sS][tT][oO][rR][aA][gG][eE]/,
    _MERGE: $ => /[mM][eE][rR][gG][eE]/,
    _ON: $ => /[oO][nN]/,
    _OPEN: $ => /[oO][pP][eE][nN]/,
    _OTHER: $ => /[oO][tT][hH][eE][rR]/,
    _PIC: $ => /[pP][iI][cC]/,
    _PICTURE: $ => /[pP][iI][cC][tT][uU][rR][eE]/,
    _PROCEDURE: $ => /[pP][rR][oO][cC][eE][dD][uU][rR][eE]/,
    _PROGRAM_ID: $ => /[pP][rR][oO][gG][rR][aA][mM]-[iI][dD]/,
    _RECORD: $ => /[rR][eE][cC][oO][rR][dD]/,
    _RECORDS: $ => /[rR][eE][cC][oO][rR][dD][sS]/,
    _SECTION: $ => /[sS][eE][cC][tT][iI][oO][nN]/,
    _SELECT: $ => /[sS][eE][lL][eE][cC][tT]/,
    _SHARING: $ => /[sS][hH][aA][rR][iI][nN][gG]/,
    _UPDATE: $ => /[uU][pP][dD][aA][tT][eE]/,
    _USING: $ => /[uU][sS][iI][nN][gG]/,
    _WITH: $ => /[wW][iI][tT][hH]/,
    _WORD: $ => /([0-9][a-zA-Z0-9-]*[a-zA-Z][a-zA-Z0-9-]*)|([a-zA-Z][a-zA-Z0-9-]*)/,
    _WORKING_STORAGE: $ => /[wW][oO][rR][kK][iI][nN][gG]-[sS][tT][oO][rR][aA][gG][eE]/,
